--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -13,12 +13,12 @@ projects:
   terraform_version: v0.12.0
   apply_requirements: [mergeable, approved]
   workflow: myworkflow
-workflows:
-  empty: {}
-  myworkflow:
-    plan:
-      steps:
-      - run: echo planning
-    apply:
-      steps:
-      - run: echo applying
+# workflows:
+#   empty: {}
+#   myworkflow:
+#     plan:
+#       steps:
+#       - run: echo planning
+#     apply:
+#       steps:
+#       - run: echo applying
