--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -12,7 +12,7 @@ projects:
   workspace: default
   terraform_version: v0.12.0
   apply_requirements: [mergeable, approved]
-  workflow: myworkflow
+  workflow: gcponly
 # workflows:
 #   empty: {}
 #   myworkflow:
